# blackboxmc-rs

./: .gitignore  Cargo.toml  README.md  generate.py  jsonsearch.py  org.bukkit.inventory-  pprint.py  publish.sh
additions/: README.md  biconsumer_new.rs  biconsumer_new.rs_  biomeprovider_new.rs  blockpopulator_new.rs  chunkgenerator_new.rs  commandexecutor_new.rs  configserializable_new.rs  consumer_new.rs  conversationcanceller_new.rs  conversationprefix_new.rs  helptopic_new.rs  helptopicfactory_new.rs  maprenderer_new.rs  metadatavalue_new.rs  noisegenerator_new.rs  persistentdatatype_new.rs  plugin_base_new.rs  plugin_loader_new.rs  plugin_new.rs  plugin_new_extendable.rs  prompt_new.rs  root.rs  runnable_new.rs  tabcompleter_new.rs  tabexecutor_new.rs
blackbox-rs-proc/: Cargo.toml
blackbox-rs-proc/src/: lib.rs
blackboxmc-rs-bukkit/: Cargo.toml
blackboxmc-rs-bukkit/src/: lib.rs  prelude.rs
blackboxmc-rs-bukkit/src/advancement/: mod.rs
blackboxmc-rs-bukkit/src/attribute/: mod.rs
blackboxmc-rs-bukkit/src/ban/: mod.rs
blackboxmc-rs-bukkit/src/block/: mod.rs
blackboxmc-rs-bukkit/src/block/banner/: mod.rs
blackboxmc-rs-bukkit/src/block/data/: mod.rs
blackboxmc-rs-bukkit/src/block/data/mod_type/: mod.rs
blackboxmc-rs-bukkit/src/block/sign/: mod.rs
blackboxmc-rs-bukkit/src/block/spawner/: mod.rs
blackboxmc-rs-bukkit/src/block/structure/: mod.rs
blackboxmc-rs-bukkit/src/boss/: mod.rs
blackboxmc-rs-bukkit/src/command/: mod.rs
blackboxmc-rs-bukkit/src/command/defaults/: mod.rs
blackboxmc-rs-bukkit/src/configuration/: mod.rs
blackboxmc-rs-bukkit/src/configuration/file/: mod.rs
blackboxmc-rs-bukkit/src/configuration/serialization/: mod.rs
blackboxmc-rs-bukkit/src/conversations/: mod.rs
blackboxmc-rs-bukkit/src/damage/: mod.rs
blackboxmc-rs-bukkit/src/enchantments/: mod.rs
blackboxmc-rs-bukkit/src/entity/: mod.rs
blackboxmc-rs-bukkit/src/entity/memory/: mod.rs
blackboxmc-rs-bukkit/src/entity/minecart/: mod.rs
blackboxmc-rs-bukkit/src/event/: mod.rs
blackboxmc-rs-bukkit/src/event/block/: mod.rs
blackboxmc-rs-bukkit/src/event/enchantment/: mod.rs
blackboxmc-rs-bukkit/src/event/entity/: mod.rs
blackboxmc-rs-bukkit/src/event/hanging/: mod.rs
blackboxmc-rs-bukkit/src/event/inventory/: mod.rs
blackboxmc-rs-bukkit/src/event/player/: mod.rs
blackboxmc-rs-bukkit/src/event/raid/: mod.rs
blackboxmc-rs-bukkit/src/event/server/: mod.rs
blackboxmc-rs-bukkit/src/event/vehicle/: mod.rs
blackboxmc-rs-bukkit/src/event/weather/: mod.rs
blackboxmc-rs-bukkit/src/event/world/: mod.rs
blackboxmc-rs-bukkit/src/generator/: mod.rs
blackboxmc-rs-bukkit/src/generator/structure/: mod.rs
blackboxmc-rs-bukkit/src/help/: mod.rs
blackboxmc-rs-bukkit/src/inventory/: mod.rs
blackboxmc-rs-bukkit/src/inventory/meta/: mod.rs
blackboxmc-rs-bukkit/src/inventory/meta/components/: mod.rs
blackboxmc-rs-bukkit/src/inventory/meta/tags/: mod.rs
blackboxmc-rs-bukkit/src/inventory/meta/trim/: mod.rs
blackboxmc-rs-bukkit/src/inventory/recipe/: mod.rs
blackboxmc-rs-bukkit/src/inventory/view/: mod.rs
blackboxmc-rs-bukkit/src/loot/: mod.rs
blackboxmc-rs-bukkit/src/map/: mod.rs
blackboxmc-rs-bukkit/src/material/: mod.rs
blackboxmc-rs-bukkit/src/material/types/: mod.rs
blackboxmc-rs-bukkit/src/metadata/: mod.rs
blackboxmc-rs-bukkit/src/packs/: mod.rs
blackboxmc-rs-bukkit/src/permissions/: mod.rs
blackboxmc-rs-bukkit/src/persistence/: mod.rs
blackboxmc-rs-bukkit/src/plugin/: mod.rs
blackboxmc-rs-bukkit/src/plugin/java/: mod.rs
blackboxmc-rs-bukkit/src/plugin/messaging/: mod.rs
blackboxmc-rs-bukkit/src/potion/: mod.rs
blackboxmc-rs-bukkit/src/profile/: mod.rs
blackboxmc-rs-bukkit/src/projectiles/: mod.rs
blackboxmc-rs-bukkit/src/scheduler/: mod.rs
blackboxmc-rs-bukkit/src/scoreboard/: mod.rs
blackboxmc-rs-bukkit/src/spawner/: mod.rs
blackboxmc-rs-bukkit/src/structure/: mod.rs
blackboxmc-rs-bukkit/src/util/: mod.rs
blackboxmc-rs-bukkit/src/util/io/: mod.rs
blackboxmc-rs-bukkit/src/util/noise/: mod.rs
blackboxmc-rs-bukkit/src/util/permissions/: mod.rs
blackboxmc-rs-bungee/: Cargo.toml
blackboxmc-rs-bungee/src/: lib.rs
blackboxmc-rs-bungee/src/bungee/api/: mod.rs
blackboxmc-rs-bungee/src/bungee/api/chat/: mod.rs
blackboxmc-rs-bungee/src/bungee/api/chat/hover/content/: mod.rs
blackboxmc-rs-bungee/src/bungee/chat/: mod.rs
blackboxmc-rs-general/: Cargo.toml
blackboxmc-rs-general/src/: lib.rs
blackboxmc-rs-general/src/macros/: mod.rs
blackboxmc-rs-java/: Cargo.toml
blackboxmc-rs-java/src/: lib.rs
blackboxmc-rs-java/src/concurrent/: mod.rs
blackboxmc-rs-java/src/concurrent/atomic/: mod.rs
blackboxmc-rs-java/src/concurrent/locks/: mod.rs
blackboxmc-rs-java/src/function/: mod.rs
blackboxmc-rs-java/src/lang/: mod.rs
blackboxmc-rs-java/src/logging/: mod.rs
blackboxmc-rs-java/src/random/: mod.rs
blackboxmc-rs-java/src/regex/: mod.rs
blackboxmc-rs-java/src/stream/: mod.rs
blackboxmc-rs-java/src/util/: mod.rs
blackboxmc-rs-java/src/util/function/: mod.rs
blackboxmc-rs-java/src/util/logging/: mod.rs
blackboxmc-rs-java/src/util/random/: mod.rs
blackboxmc-rs-java/src/util/regex/: mod.rs
blackboxmc-rs-javautil/: Cargo.toml
blackboxmc-rs-javautil/src/: lib.rs
blackboxmc-rs-javautil/src/concurrent/: mod.rs
blackboxmc-rs-javautil/src/function/: mod.rs
blackboxmc-rs-javautil/src/logging/: mod.rs
blackboxmc-rs-proc/: Cargo.toml  README.md
blackboxmc-rs-proc/src/: lib.rs
examples/block-break-event/: Cargo.toml
examples/block-break-event/src/: lib.rs
examples/mc-classic-mode/: Cargo.toml
examples/mc-classic-mode/src/: lib.rs
examples/name-printer/: Cargo.toml
examples/name-printer/src/: lib.rs
src/: lib.rs
src/bukkit/: mod.rs
src/bukkit/advancement/: mod.rs
src/bukkit/attribute/: mod.rs
src/bukkit/ban/: mod.rs
src/bukkit/block/: mod.rs
src/bukkit/boss/: mod.rs
src/bukkit/command/: mod.rs
src/bukkit/configuration/: mod.rs
src/bukkit/conversations/: mod.rs
src/bukkit/event/: mod.rs
src/bungee/: mod.rs
src/macros/: memory.rs  mod.rs
(+57 files in other folders)
