[package]
name = "blackbox_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["blackboxmc-rs-general", "blackboxmc-rs-proc", "blackboxmc-rs-bukkit", "blackboxmc-rs-bungee", "blackboxmc-rs-java", "examples/mc-classic-mode", "examples/block-break-event"]

[dependencies]
eyre = "0.6.8"
jni = "0.21.1"
blackboxmc_proc = {path = "./blackboxmc-rs-proc"}
parking_lot = "0.12.1"
syn = { version = "2.0.27", features = ["full"] }
once_cell = "1.18.0"
color-eyre = "0.6.2"
