[package]
name = "blackboxmc_bukkit"
version = "0.1.0"
edition = "2021"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
jni = "0.21.1"
blackboxmc_general = {version = "0.1.0", path = "../blackboxmc-rs-general"}
blackboxmc_bungee = {version = "0.1.0", path = "../blackboxmc-rs-bungee"}
blackboxmc_java = {version = "0.1.0", path = "../blackboxmc-rs-java"}