[package]
name = "blackboxmc_bukkit"
version = "0.5.1"
edition = "2021"
license = "LGPL-2.0-or-later"
description = "BlackboxMC bindings for org.bukkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"  
jni = "0.21.1"
blackboxmc_general = {version = "0.5.1", path = "../blackboxmc-rs-general"}
blackboxmc_bungee = {version = "0.5.1", path = "../blackboxmc-rs-bungee"}
blackboxmc_java = {version = "0.5.1", path = "../blackboxmc-rs-java"}
