[package]
name = "blackboxmc_bungee"
version = "0.4.0"
edition = "2021"
license = "LGPL-2.0-or-later"
description = "BlackboxMC bindings for net.md_5.bungee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
jni = "0.21.1"
blackboxmc_general = {version = "0.4.0", path = "../blackboxmc-rs-general"}
blackboxmc_java = {version = "0.4.0", path = "../blackboxmc-rs-java"}
