[package]
name = "blackboxmc_general"
version = "0.0.0"
edition = "2021"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
jni = "0.21.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
