[package]
name = "blackboxmc_general"
version = "0.4.0"
edition = "2021"
license = "LGPL-2.0-or-later"
description = "Helper functions for BlackboxMC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
jni = "0.21.1"
blackboxmc_proc = {version = "0.4.0", path="../blackboxmc-rs-proc"}
once_cell = "1.18.0"
parking_lot = "0.12.1"

[features]
allow_release_build = []
