[package]
name = "blackboxmc_java"
version = "0.1.0"
edition = "2021"
license = "../LICENSE"
description = "BlackboxMC bindings for java.util"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackboxmc_general = {version = "0.1.0", path = "../blackboxmc-rs-general"}
color-eyre = "0.6.2"
eyre = "0.6.8"
jni = "0.21.1"