[package]
name = "blackboxmc_proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.27", features = ["full"] }
proc-macro2-diagnostics = "0.10.1"
rustc_version = "0.4.0"

[lib]
proc-macro = true
