[package]
name = "mc-classic-mode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackbox_rs = {path="../../"}
color-eyre = "0.6.2"
jni = "0.21.1"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
