[package]
name = "name-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blackboxmc_bukkit = {path="../../blackboxmc-rs-bukkit"}
blackboxmc_general = {path="../../blackboxmc-rs-general"}
color-eyre = "0.6.2"
jni = "0.21.1"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
